--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <h1 class="text-center heading">SURAH BAQARAH AYAT:286</h1>
     <marquee behavior="" direction="right">لَا يُكَلِّفُ اللَّهُ نَفْسًا إِلَّا وُسْعَهَا ۚ لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَا إِن نَّسِينَا أَوْ أَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِن قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَاقَةَ لَنَا بِهِ ۖ وَاعْفُ عَنَّا وقفہ وَاغْفِرْ لَنَا وقفہ وَارْحَمْنَا وقفہ ۚ أَنتَ مَوْلَانَا فَانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ (286)
     </marquee>
+
+    <div class="footer">
+        <footer id="footer">Copyright © <span id="yearChanger"></span> Zeeshan Haider Soomro. All Rights Reseved.</footer>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
